# funlittleprojects

./: .gitignore  README.md
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: package.yml
claude-skills/agents/: svelte-component-editor.md  svg-design-expert.md  svg-editor.md  ui-design-expert.md
claude-skills/commands/: commit-phase.md  detail-commit.md  next-phase.md  next-sub-phase.md  save-plan.md  simple-commit.md  think-resolve.md
claude-skills/skills/android-emulator-debugging/: SKILL.md
claude-skills/skills/cost-optimised-team-lead/: SKILL.md
claude-skills/skills/font-spacing-fixer/: SKILL.md
claude-skills/skills/ios-simulator-debugging/: SKILL.md
claude-skills/skills/lan-team-access/: SKILL.md
claude-skills/skills/log-analyzer/: SKILL.md
claude-skills/skills/pr-review-board/: .gitignore  SKILL.md
claude-skills/skills/refine-component/: SKILL.md
claude-skills/skills/refine-svg/: SKILL.md
claude-skills/skills/wireframe-review-system/: SKILL.md
claude-usage-widget/: install.sh
claude-usage-widget-ios/: install.sh  project.yml
claude-usage-widget-ios/ClaudeUsage.xcodeproj/: project.pbxproj
claude-usage-widget/.local/: run-emulator-test.sh
claude-usage-widget/android/: .gitignore  settings.gradle.kts
claude-usage-widget/mockups/: index.html
scanner-cli/: .gitignore  README.md  pyproject.toml
scanner-cli/packaging/: scanner_entry.py
scanner-cli/src/scanner/: __init__.py  cli.py  protocol.py  transport.py
scanner-cli/tests/: test_cli.py  test_protocol.py  test_transport.py
scripts/: scan-personal-info.py
(+87 files in other folders)
