[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanner-cli"
version = "0.1.0"
description = "Send Honeywell N36XX barcode commands over serial."
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "click>=8.1",
]

[project.scripts]
scanner = "scanner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
